syntax = "proto3";

package shopdev;

option go_package = "./pb";
import "app/if/app_calculator_if.proto";
import "google/api/annotations.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/api/v1/example/echo"
      body: "*"
    };
  }
}